--- a/contact.html
+++ b/contact.html
@@ -55,6 +55,7 @@
         <ul class="navbar">
           <li class="navbar2"><a href="index.html">Home</a></li>
           <li class="active"><a href="contact.html">Contact</a></li>
+          <li class="navbar2"><a href="quotes.html">Quotes</a></li>
         </ul>
       </nav>
     </div>
