--- a/quotes.html
+++ b/quotes.html
@@ -14,9 +14,9 @@
     <div>
       <nav>
         <ul class="navbar">
-          <li class="active"><a href="index.html">Home</a></li>
+          <li class="navbar2"><a href="index.html">Home</a></li>
           <li class="navbar2"><a href="contact.html">Contact</a></li>
-          <li class="navbar2"><a href="quotes.html">Quotes</a></li>
+          <li class="active"><a href="quotes.html">Quotes</a></li>
         </ul>
       </nav>
     </div>
@@ -44,12 +44,6 @@
     <div class="content">
       <h1>WolfPup's Hub</h1>
       <h2>Welcome.</h2>
-    </div>
-
-    <div class="urls">
-      <div class="icons"><a href="https://discord.gg/DsNuQSr"><img src="img/discord.png"></a></div>
-      <div class="icons"><a href="https://twitter.com/WPup43"><img src="img/twitter.png"></a></div>
-      <div class="icons"><a href="https://www.youtube.com/channel/UChAsDmIp6VPEZKn9XJpj-ZA"><img src="img/youtube.png"></a></div>
     </div>
 
     <div>
