--- a/contact.html
+++ b/contact.html
@@ -55,7 +55,6 @@
         <ul class="navbar">
           <li class="navbar2"><a href="index.html">Home</a></li>
           <li class="active"><a href="contact.html">Contact</a></li>
-          <li class="navbar2"><a href="quotes.html">Quotes</a></li>
         </ul>
       </nav>
     </div>
@@ -91,7 +90,7 @@
     </div>
 
     <div>
-      <footer>Owned, Hosted and Coded by WolfPup43</footer>
+      <footer>Owned, Hosted and Coded by WolfPup43 | Last Updated 30/06/2020</footer>
     </div>
 
   </body>
