--- a/index.html
+++ b/index.html
@@ -16,7 +16,6 @@
         <ul class="navbar">
           <li class="active"><a href="index.html">Home</a></li>
           <li class="navbar2"><a href="contact.html">Contact</a></li>
-          <li class="navbar2"><a href="quotes.html">Quotes</a></li>
         </ul>
       </nav>
     </div>
@@ -53,7 +52,7 @@
     </div>
 
     <div>
-      <footer>Owned, Hosted and Coded by WolfPup43</footer>
+      <footer>Owned, Hosted and Coded by WolfPup43 | Last Updated 30/06/2020</footer>
     </div>
 
   </body>
