--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
         <ul class="navbar">
           <li class="active"><a href="index.html">Home</a></li>
           <li class="navbar2"><a href="contact.html">Contact</a></li>
+          <li class="navbar2"><a href="donate.html">Donate</a></li>
         </ul>
       </nav>
     </div>
