--- a/donate.html
+++ b/donate.html
@@ -12,10 +12,10 @@
 
     <style>
       .content {
-          width: 24vw;
+          width: 16vw;
           position: absolute;
           top: 14vh;
-          left: 38vw;
+          left: 42vw;
           height: 5.8vw;
           border-radius: 0.8vw;
           background-color: rgba(23, 23, 23, 0.65);
@@ -126,8 +126,8 @@
     </div>
 
     <div class="content">
-      <h1>Contact Information</h1>
-      <h2>Message me.</h2>
+      <h1>Donations</h1>
+      <h2>Support the site.</h2>
     </div>
 
     <div class="contact">
