--- a/donate.html
+++ b/donate.html
@@ -131,8 +131,8 @@
     </div>
 
     <div class="contact">
-      <h2>Donate with Bitcoin</h2>
-      <h3>17iqcK7g4vPNh4QiwsQpCkYngqZCdgfXPk</h3>
+      <h2>Earn Free Bitcoin</h2>
+      <h3><a href="http://www.freebiebitcoin.com">Earn free bitcoin</a></h3>
     </div>
 
     <div class="contact2">
