--- a/donate.html
+++ b/donate.html
@@ -12,10 +12,10 @@
 
     <style>
       .content {
-          width: 16vw;
+          width: 24vw;
           position: absolute;
           top: 14vh;
-          left: 42vw;
+          left: 38vw;
           height: 5.8vw;
           border-radius: 0.8vw;
           background-color: rgba(23, 23, 23, 0.65);
@@ -126,13 +126,13 @@
     </div>
 
     <div class="content">
-      <h1>Donations</h1>
-      <h2>Support the site.</h2>
+      <h1>Contact Information</h1>
+      <h2>Message me.</h2>
     </div>
 
     <div class="contact">
-      <h2>Earn Free Bitcoin</h2>
-      <h3><a href="http://www.freebiebitcoin.com">Earn free bitcoin</a></h3>
+      <h2>Donate with Bitcoin</h2>
+      <h3>1BvBMSEYstWetqTFn5Au4m4GFg7xJaNVN2</h3>
     </div>
 
     <div class="contact2">
