--- a/contact.html
+++ b/contact.html
@@ -87,7 +87,7 @@
 
     <div class="contact">
       <h2>Discord: WolfPup#9929</h2>
-      <h2>Email: jackcapel2004@gmail.com</h2>
+      <h2>Email: officialwolfpup43@gmail.com</h2>
     </div>
 
     <div>
