--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
     </div>
 
     <div class="urls">
-      <div class="icons"><a href="https://discord.gg/DsNuQSr"><img src="img/discord.png"></a></div>
+      <div class="icons"><a href="https://discord.gg/xNMAaUq"><img src="img/discord.png"></a></div>
       <div class="icons"><a href="https://twitter.com/WPup43"><img src="img/twitter.png"></a></div>
       <div class="icons"><a href="https://www.youtube.com/channel/UChAsDmIp6VPEZKn9XJpj-ZA"><img src="img/youtube.png"></a></div>
     </div>
